added e2e test for api